# PoemEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  Main.qml  THIRD_PARTY_LICENSES.txt  appsettings.cpp  appsettings.h  diff.txt  diff4.txt  juproxymodel.cpp  juproxymodel.h  main.cpp  output.i  poemmanager.cpp  poemmanager.h  qmlinterface.cpp  qmlinterface.h  resource.qrc  trie.h
PoemEngineUi/: DebugOutline.qml  Main.qml  Main.qml.cbbsRs  Main.qml.dFuaSS  Main.qml.eHmxLx  Main.qml.eorjLo  Main.qml.heIHOq  Main.qml.kaGuLr  Main.qml.mQCAQw  Main.qml.nHVMyG  Main.qml.rQcnKB  Main.qml.sEcSTf  PoemEngineUi.qmlproject  PoemEngineUi.qmlproject.qtds  PopupInfo.qml  PopupInfo.qml.FEQtTj  PopupInfo.qml.MXVRrP  PopupInfo.qml.oVjVfF  PopupPoem.qml  PzTextItem.qml  SettingsDialog.qml  SettingsDialog.qml.UCTRgf  SettingsDialog.qml.fyMkQa  qtquickcontrols2.conf
PoemEngineUi/PoemEngineUi/: Constants.qml  qmldir
PoemEngineUi/PoemEngineUi/designer/: plugin.metainfo
PoemEngineUi/PoemEngineUiContent/: App.qml
android/: AndroidManifest.xml
data/: psy-map.json  psy-yunbu.json  psy.csv  psy.json  unihan-extend.json
translations/: zh_CN.ts  zh_MO.ts
